--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -352,8 +352,13 @@
                      Margin="8,0,0,0"
                      Padding="8,0"
                      Command="{Binding ContinueMerge}"
-                     IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNotNull}}"
-                     IsEnabled="{Binding !HasUnsolvedConflicts}">
+                     IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNotNull}}">
+          <SplitButton.IsEnabled>
+            <MultiBinding Converter="{x:Static BoolConverters.And}">
+              <Binding Path="IsCommitting" Converter="{x:Static BoolConverters.Not}"/>
+              <Binding Path="HasUnsolvedConflicts" Converter="{x:Static BoolConverters.Not}"/>
+            </MultiBinding>
+          </SplitButton.IsEnabled>
           <SplitButton.Flyout>
             <MenuFlyout>
               <MenuItem Header="{DynamicResource Text.WorkingCopy.CommitToEdit}" Command="{Binding Commit}"/>
@@ -370,6 +375,7 @@
                 Command="{Binding Commit}"
                 HotKey="{OnPlatform Ctrl+Enter, macOS=⌘+Enter}"
                 IsVisible="{Binding InProgressContext, Converter={x:Static ObjectConverters.IsNull}}"
+                IsEnabled="{Binding !IsCommitting}"
                 ToolTip.Placement="Top"
                 ToolTip.VerticalOffset="0">
           <ToolTip.Tip>
@@ -401,6 +407,7 @@
                 Padding="8,0"
                 Command="{Binding CommitWithPush}"
                 HotKey="Alt+Enter"
+                IsEnabled="{Binding !IsCommitting}"
                 ToolTip.Tip="{OnPlatform Alt+Enter, macOS=⌥+Enter}"
                 ToolTip.Placement="Top"
                 ToolTip.VerticalOffset="0">
