--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -77,7 +77,7 @@
 
           <ListBox.ItemTemplate>
             <DataTemplate DataType="vm:InteractiveRebaseItem">
-              <Grid ColumnDefinitions="16,110,*,Auto" Margin="8,0" ClipToBounds="True">
+              <Grid ColumnDefinitions="16,110,*,32,108,96,Auto,32,32" Margin="8,0" ClipToBounds="True">
                 <!-- Drag & Drop Anchor -->
                 <Border Grid.Column="0" Background="Transparent"
                         Loaded="OnSetupRowHeaderDragDrop"
@@ -188,44 +188,39 @@
                   <TextBlock Grid.Column="1" Classes="primary" Margin="0,0,4,0" Text="{Binding Subject}"/>
                 </Grid>
 
-                <Grid Grid.Column="3" ColumnDefinitions="32,108,96,Auto,32,32" IsHitTestVisible="False" ClipToBounds="True">
-                  <!-- Author Avatar -->
-                  <v:Avatar Grid.Column="0"
-                            Width="16" Height="16"
-                            Margin="8,0,0,0"
-                            VerticalAlignment="Center"
-                            User="{Binding Commit.Author}"/>
+                <!-- Author Avatar -->
+                <v:Avatar Grid.Column="3"
+                          Width="16" Height="16"
+                          Margin="8,0,0,0"
+                          VerticalAlignment="Center"
+                          User="{Binding Commit.Author}"/>
 
-                  <!-- Author Name -->
-                  <TextBlock Grid.Column="1"
-                             Classes="primary"
-                             MaxWidth="90"
-                             Margin="6,0,12,0"
-                             Text="{Binding Commit.Author.Name}"
-                             HorizontalAlignment="Left"/>
+                <!-- Author Name -->
+                <Border Grid.Column="4" ClipToBounds="True">
+                  <TextBlock Classes="primary" Margin="6,0,12,0" Text="{Binding Commit.Author.Name}"/>
+                </Border>
 
-                  <!-- Commit SHA -->
-                  <Border Grid.Column="2" ClipToBounds="True">
-                    <TextBlock Classes="primary"
-                               Text="{Binding Commit.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
-                               HorizontalAlignment="Center"/>
-                  </Border>
+                <!-- Commit SHA -->
+                <Border Grid.Column="5" ClipToBounds="True">
+                  <TextBlock Classes="primary"
+                             Text="{Binding Commit.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}"
+                             HorizontalAlignment="Center"/>
+                </Border>
 
-                  <!-- Commit Time -->
-                  <Border Grid.Column="3" ClipToBounds="True">
-                    <TextBlock Classes="primary" Text="{Binding Commit.CommitterTimeStr}" Margin="8,0"/>
-                  </Border>
+                <!-- Commit Time -->
+                <Border Grid.Column="6">
+                  <TextBlock Classes="primary" Text="{Binding Commit.CommitterTimeStr}" Margin="8,0"/>
+                </Border>                
 
-                  <!-- MoveUp Button -->
-                  <Button Grid.Column="4" Classes="icon_button" Click="OnMoveItemUp" ToolTip.Tip="Alt+Up">
-                    <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Up}"/>
-                  </Button>
+                <!-- MoveUp Button -->
+                <Button Grid.Column="7" Classes="icon_button" Click="OnMoveItemUp" ToolTip.Tip="Alt+Up">
+                  <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Up}"/>
+                </Button>
 
-                  <!-- MoveDown Button -->
-                  <Button Grid.Column="5" Classes="icon_button" Click="OnMoveItemDown" ToolTip.Tip="Alt+Down">
-                    <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Down}"/>
-                  </Button>
-                </Grid>
+                <!-- MoveDown Button -->
+                <Button Grid.Column="8" Classes="icon_button" Click="OnMoveItemDown" ToolTip.Tip="Alt+Down">
+                  <Path Width="14" Height="14" Margin="0,4,0,0" Data="{StaticResource Icons.Down}"/>
+                </Button>
               </Grid>
             </DataTemplate>
           </ListBox.ItemTemplate>
