--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -65,6 +65,7 @@
               <Setter Property="Margin" Value="0"/>
               <Setter Property="Padding" Value="0"/>
               <Setter Property="Height" Value="28"/>
+              <Setter Property="HorizontalAlignment" Value="Stretch"/>
               <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
             </Style>
           </ListBox.Styles>
@@ -77,7 +78,7 @@
 
           <ListBox.ItemTemplate>
             <DataTemplate DataType="vm:InteractiveRebaseItem">
-              <Grid ColumnDefinitions="16,110,*,32,108,96,Auto,32,32" Margin="8,0" ClipToBounds="True">
+              <Grid Height="26" Margin="8,0" ColumnDefinitions="16,110,*,32,108,96,Auto,32,32" ClipToBounds="True">
                 <!-- Drag & Drop Anchor -->
                 <Border Grid.Column="0" Background="Transparent"
                         Loaded="OnSetupRowHeaderDragDrop"
