--- a/src/Views/RepositoryToolbar.axaml
+++ b/src/Views/RepositoryToolbar.axaml
@@ -21,6 +21,10 @@
         <Path Width="13" Height="13" Data="{StaticResource Icons.Terminal}"/>
       </Button>
 
+      <Button Classes="icon_button" Width="32" Command="{Binding OpenInBrowser}" ToolTip.Tip="{DynamicResource Text.RemoteCM.OpenInBrowser}" IsVisible="{Binding HasRemotes}">
+        <Path Width="13" Height="13" Data="{StaticResource Icons.Browser}"/>
+      </Button>
+
       <Button Classes="icon_button" Width="32" Click="OpenGitLogs" ToolTip.Tip="{DynamicResource Text.Repository.ViewLogs}">
         <Path Width="14" Height="14" Margin="0,1,0,0" Data="{StaticResource Icons.Logs}"/>
       </Button>
